# safezip

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.rst  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.rst  SECURITY.rst  conftest.py  pyproject.toml  tox.ini
.agents/skills/update-documentation/: SKILL.md
.github/workflows/: test.yml  test_unstable.yml
docs/: _implement_pytest_hooks.rst  conf.py  documentation.rst  full-llms.rst  full_llms.rst  llms.rst  markdown.rst  requirements.txt  source_tree.rst  source_tree_full.rst
src/safezip/: __init__.py  _core.py  _events.py  _exceptions.py  _guard.py  _sandbox.py  _streamer.py
src/safezip/cli/: __init__.py  _main.py
src/safezip/tests/: __init__.py  conftest.py  test_cli.py  test_edge_cases.py  test_guard.py  test_integration.py  test_sandbox.py  test_streamer.py
